
2.9 (release planned for 2015-03-30)

-English:
    -Added many new style rules contributed by Heikki Lehvaslaiho. As these
     may cause false alarms, they are not activated by default. You can
     activate them by turning on all rules in the new 'Plain English' category.

-German:
    -added a few new rules

-Polish:
    -added a few new rules

-Russian:
     -added and improved rules

-API:
    -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.

-Rule syntax:
    -A rule may now have a single example sentence as long as it has a 'correction'
     attribute - this can save some redundancy if the only correct sentence is the
     same as the incorrect sentence with the correction applied. Before, a rule
     needed at least two example sentences.
    -'example' element: type="incorrect" is now optional if there's a 'correction'
     attribute. The 'correction' attribute implies that the sentence is incorrect.
    -'example' element: type="correct" is now optional. No 'type' attribute and
     no 'correction' attribute implies that the sentence is correct.

-Internal:
    -We have switched from Apache Tika to language-detector
     (https://github.com/optimaize/language-detector) for automatically
     identifying the text language. It should be faster and results
     should be more reliable.
     Detection of Asturian and Galician had to be disabled because the
     detection quality was too low and also affected detection of Spanish.


2.8 (2014-12-30)

-Asturian:
    -removed dependency on Hunspell, now uses Morfologik for spell checking

-Breton:
    -added and improved a few rules

-Catalan:
    -updated dictionary
    -added and improved rules
    -fixed false alarms

-Dutch:
    -added and improved many rules

-English:
    -some new rules (thanks to Nick Hough)
    -updated the tagger and synthesizer dictionaries, fixing issue #202
    -new filter to be used for matching the part-of-speech of parts of words, e.g.: