@@ -16,6 +16,13 @@ LanguageTool Change Log
 -Russian:
      -added and improved rules
 
+-Spelling:
+    -The ignore.txt file that can be used to add accepted words to the spell checker
+     is now also considered when creating suggestions for misspelled words. In other
+     words, items from ignore.txt might be suggested for words that are misspelled
+     and similar to a word from the ignore.txt file.
+     (TODO: this does not work yet for German, Galician, Khmer, and Swedish)
+
 -API:
     -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
 
